--- a/dashBoard.css
+++ b/dashBoard.css
@@ -2,6 +2,15 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+.top-head{
+    height: 70px;
+}
+
+.change-color{
+    color: green
 }
 
 .head-content {
@@ -12,6 +21,20 @@
     /* border-bottom: 1px solid #a7a7a71f */
 }
 
+.down-head{
+    /* border-bottom: 1px solid grey; */
+    /* background: red; */
+}
+
+.BEffect{
+    width: 80%;
+    border-bottom: 1px solid #a7a7a71f;
+}
+
+.content-page{
+    min-width: 80%;
+    background: red;
+}
 .company-logo{
     color: black;
 }
@@ -71,7 +94,7 @@
 }
 
 .logo-here, .search-here{
-    width: 25%;
+    width: 20%;
     background: green;
     color: white;
     padding: 10px;
@@ -145,7 +168,7 @@ img{
 }
 
 .sidebar{
-    width: 25%;
+    width: 20%;
     color: #ffffff85;
     min-height: 500px;
     font-size: 12px;
@@ -171,7 +194,7 @@ img{
     display: flex;
     border-bottom: 1px solid  #a7a7a71f;
     justify-content: space-between;
-    width: 75%;
+    width: 80%;
 }
 
 .align-center{
