--- a/dashBoard.css
+++ b/dashBoard.css
@@ -33,7 +33,7 @@
 
 .content-page{
     min-width: 80%;
-    background: red;
+    /* background: red; */
 }
 .company-logo{
     color: black;
@@ -163,7 +163,7 @@ img{
 
 .fa-bars{
     color: white;
-    padding: 40px 10px;
+    padding: 47px 10px;
     background: blue;
 }
 
@@ -176,7 +176,7 @@ img{
     background: #2a3753e3;
     white-space: nowrap;
     overflow: hidden;
-    position: absolute;
+    /* position: absolute; */
 }
 
 .hidden-search{
